--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-body (font-family: IBM Plex Mono, monospace;
+body {
+font-family: IBM Plex Mono, monospace;
 font-weight: 400; 
 font-size: 20px;
 /* Sets the font size to 20px */
@@ -6,4 +7,7 @@ line-height: 1.6;
 /* Sets the line-height to 1.6 */
 background-color: darkblue;
 color: white; 
-)
+padding: 20px;
+text-align: center;
+}
+
