--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
     color: var(--main-box);
 }
 
-.pokemon-search {
+#search-input{
     border-radius: 15px;
     background-color: var(--main-box);
     border: 1px solid rgb(0, 0, 0);
