--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@ body {
     border-bottom: 1px solid var(--main-text);
     background-color: var(--main-background);
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); 
-
 }
 
 .navbar-brand {
@@ -39,22 +38,19 @@ body {
     color: var(--main-box);
 }
 
-.pokemon-search {
+#search-input {
     border-radius: 15px;
     background-color: var(--main-box);
     border: 1px solid rgb(0, 0, 0);
     color: var(--black);
 }
 
-.pokemon-search::placeholder {
+#search-input::placeholder {
     color: black;
     opacity: 5;
     font-style: italic;
 }
 
-.search-list {
-    grid-template-columns: 1fr;
-}
 
 
 /*-------------POKEDEX-------------*/
@@ -77,11 +73,6 @@ body {
     list-style: none;
     text-align: center;
 }
-
-/* .group-list-item{
-    background-color: var(--main-box);
-    border: none;
-}*/
 
 
 .pokemon-name-button{
@@ -112,7 +103,8 @@ body {
     color: var(--main-text);
     opacity: 0.8;
     transition: 0.5s;
-  }
+}
+
 
 
 /*-------------MODAL-------------*/
